--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "16.4.1",
     "react-native": "0.56.0",
     "react-native-elements": "^0.19.1",
+    "react-native-i18n": "^2.0.15",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-logger": "^1.0.3",
     "react-native-vector-icons": "^5.0.0",
